added dropwizard-example from the dropwizard repo