@@ -1,1 +1,4 @@
 # goodreads-sentiment-analysis
+java --add-modules java.xml.bind -jar target/dropwizard-example-1.4.0-SNAPSHOT.jar server example.yml
+curl -H "Content-Type: application/json" http://localhost:8080/hello-world?name=alina
+
